# Losshound

./: .gitignore  CHANGELOG.md  Losshound.spec  README.md  about.txt  agents.md  config.default.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_as_admin.bat
scripts/: version_info.txt
src/losshound/: __main__.py  app.py
src/losshound/cli/: optimizer_cli.py  runner.py
src/losshound/core/: alerts.py  benchmark.py  config.py  diagnosis.py  dns_bench.py  dns_checks.py  drop_analyzer.py  firewall.py  gateway.py  icmp_ping.py  isp_report.py  isp_report_pdf.py  job_object.py  lag_attribution.py  lan_monitor.py  load_benchmark.py  local_monitor.py  logger.py  models.py  notifications.py  optimizer.py  ping.py  qos.py  route_monitor.py  scheduler.py  scoring.py  subprocess_runner.py  trending.py  validation.py  wifi_diag.py  (+1 more)
tests/: conftest.py  test_alerts.py  test_alerts_config.py  test_alerts_history.py  test_app_cli.py  test_config.py  test_diagnosis.py  test_diagnosis_actions.py  test_dns_checks.py  test_drop_forensics.py  test_firewall.py  test_gateway.py  test_gui_states.py  test_history.py  test_icmp_ping.py  test_isp_report_pdf.py  test_lag_attribution.py  test_lan_monitor.py  test_load_benchmark.py  test_models.py  test_notifications.py  test_optimizer_extensions.py  test_optimizer_safety.py  test_ping.py  test_qos.py  test_qos_mitigation_ui.py  test_route_monitor.py  test_scheduler_cadence.py  test_settings_config.py  test_subprocess_runner.py  test_trending.py  test_trust_clarity_ui.py  test_validation.py  test_version.py  test_windows_network.py
(+22 files in other folders)
