[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "losshound"
version = "0.1.1"
description = "Lightweight Windows network diagnosis tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "NoSelection"}]
dependencies = [
    "PySide6>=6.5",
    "reportlab>=4.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyinstaller>=6.0",
]

[project.scripts]
losshound = "losshound.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
